@@ -39,6 +39,7 @@
  * 10/02/2014      RC          4.1.0       Added RtiCompassCalView.
  * 07/09/2015      RC          0.0.5       Added Environment.Exit(Environment.ExitCode) to shutdown all threads.
  * 08/28/2017      RC          4.5.2       Added DataOutputView.
+ * 09/11/2017      RC          4.5.4       Check if the website exists for AutoUpdate.
  * 
  */
 
@@ -58,6 +59,7 @@ namespace RTI
     using log4net.Layout;
     using System.IO;
     using AutoUpdaterDotNET;
+    using System.Net;
 
     /// <summary>
     /// Interface for the ShellViewModel.
@@ -288,8 +290,27 @@ namespace RTI
         /// </summary>
         private void CheckForUpdates()
         {
-            //AutoUpdater.Start("http://66.147.244.164/~rowetech/pulse/Pulse_AppCast.xml");
-            AutoUpdater.Start("http://www.rowetechinc.com/pulse/Pulse_AppCast.xml");
+            try
+            {
+                string url = @"http://www.rowetechinc.com/pulse/Pulse_AppCast.xml";
+
+                WebRequest request = WebRequest.Create(url);
+                HttpWebResponse response = (HttpWebResponse)request.GetResponse();
+                if (response != null && response.StatusCode == HttpStatusCode.OK && response.ResponseUri == new System.Uri(url))
+                {
+                    //AutoUpdater.Start("http://66.147.244.164/~rowetech/pulse/Pulse_AppCast.xml");
+                    AutoUpdater.Start(url);
+                }
+                response.Close();
+            }
+            catch(System.Net.WebException wex)
+            {
+                Debug.WriteLine("Website is down and cannot get the latest version", wex);
+            }
+            catch(Exception e)
+            {
+                Debug.WriteLine("AutoUpdater could not start", e);
+            }
         }
 
         #endregion
